# skeleton_tool_cmd

./: README.md  setup.cfg
skeleton_plugin/: __init__.py  __main__.py  appstates.py  display.py  drawing.py  graph.py  graphprinter.py  mainalgo.py  mywidget.py  napari.yaml  pruning.py  sklt.py  testing.py
skeleton_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
skeleton_plugin/outs/: 32test.ply
