[metadata]
name = skeleton-plugin
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    plyfile

[options.package_data]
skeleton-plugin = napari.yaml

[options.entry_points]
napari.manifest =
    skeleton-plugin = skeleton_plugin:napari.yaml

[options.packages.find]
include = graph